2005-03-25 Pierrick LE GALL <pierrick at phpwebgallery dot net>

	* application version is defined at build or release
	creation. This way, include/constants.php won't change at each
	build.

2005-03-25 Pierrick LE GALL <pierrick at phpwebgallery dot net>

	* typo fixed : wrong block name closed in template

2005-03-25 Pierrick LE GALL <pierrick at phpwebgallery dot net>
	
	* new feature : caddie. The purpose is batch management,
	especially concerning elements to categories associations.This is
	the very first release, needs many improvements.